2018-01-29      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2type.c:
          (m2type_BuildProcTypeParameterDeclaration) no longer
          layout the paramater type at this time (as it might be a
          recursive usage of the proctype).
	* gm2/Make-lang.in:  removed duplicate and incorrect rule.
          Changed rule for building C files to the correct directory.
	* gm2/Make-lang.in:  removed Storage.c from GM2-LIBS-BOOT-C.
          made gm2.paranoid dependant upon mc.
	* gm2/gm2-libs-ch/Storage.c:  removed since it is built (in
	  the build directory) from Storage.mod via mc.
	* gm2/gm2-libs-ch/StdIO.c:  removed since it is built (in the
          build directory) from StdIO.mod via mc.
	* gm2/Make-lang.in:  added Storage.mod into GM2-LIBS-MODS.
	* gm2/gm2-compiler/M2Quads.mod:  (CheckBecomesMeta)
          check to see if GetDType(Des) and GetDType(Exp) are non
          nul before testing against unbounded.  Defends against
          undefined symbols being compared which might result in
	  a fatal error.  (see testsuite/gm2/iso/fail/bug8.mod).

2018-01-28      Gaius Mulley <gaius@gnu.org>

	* gm2/m2.flex:  change linelen to int rather than
          unsigned int, a mismatch found when building for
          cygwin.
	* gm2/gm2-gcc/gcc-consolidation.h:  #include "stringpool.h"
	* gm2/gm2-compiler/M2Base.mod:  removed unnecessary forward
          declarations.  (PushSizeOf)  does not assume the fixed
          fixed complex data types exist, uses constants instead.
	* gm2/gm2-gcc/m2type.c:  (build_m2_specific_size_type)
          checks to see if the REAL_TYPE with a desired precision
          exists.  NULL is returned if the target does not support
          the data type.

2017-10-17      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/gm2lcc.mod:  removed unnecessary prototypes.
          ObjectArray remember the objects on the command line.
          ConCatObject only concat an object if it does not exist on